--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
         web:
-                image: flask_port_v1
+                image: art_port_1
                 build: .
                 ports:
-                        - "8086:8086"
+                        - "8974:8974"
                 volumes:
                         - ./volumes:/volumes
                         - ./instance:/instance
